# amr-social-chemistry-reasoner

./: .gitignore  README.md  pyproject.toml  setup.cfg
amr_reasoner/: AmrMergeGenerator.py  amr_logic_stats.py  amr_logic_to_tensor_logic.py  amr_similarity_func.py  amr_util.py  util.py
amr_reasoner/datasets/social_chemistry/: RotProcessor.py  RotReasoner.py  evaluate_social_chemistry_rots.py  load_social_chemistry_data.py
amr_reasoner/embedding/: EmbeddingGenerator.py  RobertaEmbeddingGenerator.py
amr_reasoner/parse/: AmrParseCache.py  AmrParser.py  IbmAmrParser.py  populate_amr_cache.py
amr_reasoner/scripts/: debug_social_chemistry_evaluation_failures.py  enhance_social_chemistry_data.py  evaluate_social_chemistry_rots.py
tests/: test_AmrMergeGenerator.py  test_amr_logic_stats.py  test_amr_logic_to_tensor_logic.py  test_amr_util.py
tests/__snapshots__/: test_AmrMergeGenerator.ambr
tests/datasets/social_chemistry/: test_RotProcessor.py
tests/embedding/: test_RobertaEmbeddingGenerator.py
tests/parse/: test_populate_amr_cache.py
