[tool.poetry]
name = "amr-reasoner"
version = "0.1.0"
description = ""
authors = ["David Chanin <chanindav@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
# transition-amr-parser = {git = "https://github.com/chanind/transition-amr-parser.git", rev = "master"}
jsonlines = "^3.1.0"
tenacity = "^8.1.0"
amr-logic-converter = "^0.10.2"
Penman = "^1.2.2"
# torch 13+ won't install on OSX with Poetry :(
# https://github.com/python-poetry/poetry/issues/6409
pandas = "^1.5.2"
transformers = "^4.25.1"
optuna = "^3.0.5"
torch = "^1.13.1"
tensor-theorem-prover = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
syrupy = "^3.0.2"
notebook = "^6.5.1"
ipywidgets = "^8.0.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.3"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
